# sirc

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEDERATION.md  README.md  USAGE.md  test_federation.sh
crates/sirc-client/: Cargo.toml
crates/sirc-client/src/: client.rs  main.rs  ui.rs
crates/sirc-crypto/: Cargo.toml
crates/sirc-crypto/src/: keystore.rs  lib.rs  ratchet.rs
crates/sirc-protocol/: Cargo.toml
crates/sirc-protocol/src/: codec.rs  lib.rs  message.rs
crates/sirc-server/: Cargo.toml
crates/sirc-server/src/: channel.rs  client.rs  federation.rs  main.rs  metrics.rs  server.rs  tls.rs
examples/: basic_client.rs  encrypted_client.rs
