[workspace]
resolver = "2"
members = [
    "crates/sirc-server",
    "crates/sirc-client",
    "crates/sirc-crypto",
    "crates/sirc-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SIRC Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexMelanFromRingo/sirc"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Networking
bytes = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI/TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# Testing
criterion = "0.5"
